--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "astro-navbar": "^2.3.3",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "accessible-astro-components": "^2.3.6"
   }
 }
