--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^3.1.7",
     "@astrojs/tailwind": "^5.1.1",
     "astro": "^4.15.9",
+    "astro-favicons": "^2.0.2",
     "astro-font": "^0.1.81",
     "astro-navbar": "^2.3.3",
     "tailwindcss": "^3.4.13",
