--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/mdx": "^3.1.7",
+    "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.1",
     "astro": "^4.15.9",
+    "astro-better-image-service": "^2.0.34",
+    "astro-embed": "^0.7.2",
     "astro-favicons": "^2.0.2",
     "astro-font": "^0.1.81",
     "astro-navbar": "^2.3.3",
