--- a/public/icons/yandex-browser-manifest.json
+++ b/public/icons/yandex-browser-manifest.json
@@ -2,7 +2,7 @@
   "version": "1.0",
   "api_version": 1,
   "layout": {
-    "logo": "/public/suzza-fav-icon.png/yandex-browser-50x50.png",
+    "logo": "/icons/yandex-browser-50x50.png",
     "color": "#fff",
     "show_title": true
   }
